Update ParentSelection.cc

(TS-4746) ParentRecord *secondary_parentsmalloc,but no place free,which will cause memery leak