proxy/ParentSelection.cc
@@ -714,7 +714,12 @@ ParentRecord::UpdateMatch(ParentResult *result, RequestData *rdata)
 
 ParentRecord::~ParentRecord()
 {
-  ats_free(parents);
+  if(parents != NULL) {
+    ats_free(parents);
+  }
+  if(second_parents != NULL) {
+    ats_free(second_parents);
+  }
   delete selection_strategy;
   delete unavailable_server_retry_responses;
 }
